# NeuralNetworksC-

NeuralNetworks/: CMakeLists.txt  Feeder.cpp  Feeder.h  NeuralNetworks.cbp  NeuralNetworks.layout  main.cpp
NeuralNetworks/include/: Feeder.h  Layer.h  MNIST.h  Network.h  Neuron.h
NeuralNetworks/mnistconfig/: MNISTConfig.cmake
NeuralNetworks/src/: Feeder.cpp  ImageReader.hpp  Layer.cpp  Network.cpp  Neuron.cpp  mnist_reader.hpp  mnist_reader_common.hpp
